# nirikshak

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SPRINT_PLAN_1.md  SPRINT_PLAN_2.md  SPRINT_PLAN_3.md  SPRINT_PLAN_4.md  TECHNICAL_DOCUMENTATION.md  TEST_PLAN.md  UI_REDESIGN_PLAN.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  HONEST_SCOPE.md
documents/bidder documents/: tender_construction.yaml
documents/bidder documents/nirikshak_demo_data/: README.md
golden_set/: ground_truth.yaml
nirikshak/api/: main.py
nirikshak/audit/: chain.py  replay.py  signer.py
nirikshak/bidder/: confidence.py  doc_classifier.py  verifier.py
nirikshak/bidder/extractors/: __init__.py  base.py  document_checklist.py  experience_count.py  financial_threshold.py  policy_compliance.py  quality_certification.py  statutory_registration.py
nirikshak/console/: helpers.py  streamlit_app.py  theme.py
nirikshak/core/: config.py  db.py  hashing.py  schemas.py
nirikshak/eval/: golden_set.py  metrics.py
nirikshak/ingestion/: classify.py  ocr.py  page_render.py  pdf_text.py  vision.py
nirikshak/llm/: client.py  instructor_helpers.py
nirikshak/tender/: criteria_spec.py  criterion_miner.py  section_classifier.py
nirikshak/verdict/: aggregator.py  engine.py
playwright testing/: TESTING_REPORT.md
playwright_testing/: TESTING_REPORT.md
seed/: generate_demo_data.py  run_demo.py
tests/unit/: test_audit_chain.py  test_disjunctive.py  test_hashing.py  test_schemas.py  test_verdict_engine.py
(+43 files in other folders)
