[project]
name = "nirikshak"
version = "0.1.0"
description = "AI-Based Tender Evaluation and Eligibility Analysis"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    # LLM
    "anthropic>=0.40",
    "instructor>=1.5",
    # PDF
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    # OCR
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.38",
    "python-multipart>=0.0.9",
    # Utils
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "python-docx>=1.1",
    "reportlab>=4.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["nirikshak*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
